--- a/notebooks/Ch04_Feature_Engineering_and_Selection/Feature Engineering on Categorical Data.ipynb
+++ b/notebooks/Ch04_Feature_Engineering_and_Selection/Feature Engineering on Categorical Data.ipynb
@@ -1654,49 +1654,39 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Samples can not be a single string. The input must be an iterable over iterables of strings.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeature_extraction\u001b[39;00m \u001b[39mimport\u001b[39;00m FeatureHasher\n\u001b[0;32m      3\u001b[0m fh \u001b[39m=\u001b[39m FeatureHasher(n_features\u001b[39m=\u001b[39m\u001b[39m6\u001b[39m, input_type\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mstring\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m hashed_features \u001b[39m=\u001b[39m fh\u001b[39m.\u001b[39;49mfit_transform(vg_df[\u001b[39m'\u001b[39;49m\u001b[39mGenre\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[0;32m      5\u001b[0m hashed_features \u001b[39m=\u001b[39m hashed_features\u001b[39m.\u001b[39mtoarray()\n\u001b[0;32m      6\u001b[0m pd\u001b[39m.\u001b[39mconcat([vg_df[[\u001b[39m'\u001b[39m\u001b[39mName\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGenre\u001b[39m\u001b[39m'\u001b[39m]], pd\u001b[39m.\u001b[39mDataFrame(hashed_features)], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39miloc[\u001b[39m1\u001b[39m:\u001b[39m7\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\karim\\Documents\\GitHub\\practical-machine-learning-with-python\\.venv\\lib\\site-packages\\sklearn\\utils\\_set_output.py:140\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[39m@wraps\u001b[39m(f)\n\u001b[0;32m    139\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrapped\u001b[39m(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m--> 140\u001b[0m     data_to_wrap \u001b[39m=\u001b[39m f(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    141\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data_to_wrap, \u001b[39mtuple\u001b[39m):\n\u001b[0;32m    142\u001b[0m         \u001b[39m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    143\u001b[0m         \u001b[39mreturn\u001b[39;00m (\n\u001b[0;32m    144\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[39m0\u001b[39m], X, \u001b[39mself\u001b[39m),\n\u001b[0;32m    145\u001b[0m             \u001b[39m*\u001b[39mdata_to_wrap[\u001b[39m1\u001b[39m:],\n\u001b[0;32m    146\u001b[0m         )\n",
-      "File \u001b[1;32mc:\\Users\\karim\\Documents\\GitHub\\practical-machine-learning-with-python\\.venv\\lib\\site-packages\\sklearn\\base.py:878\u001b[0m, in \u001b[0;36mTransformerMixin.fit_transform\u001b[1;34m(self, X, y, **fit_params)\u001b[0m\n\u001b[0;32m    874\u001b[0m \u001b[39m# non-optimized default implementation; override when a better\u001b[39;00m\n\u001b[0;32m    875\u001b[0m \u001b[39m# method is possible for a given clustering algorithm\u001b[39;00m\n\u001b[0;32m    876\u001b[0m \u001b[39mif\u001b[39;00m y \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    877\u001b[0m     \u001b[39m# fit method of arity 1 (unsupervised transformation)\u001b[39;00m\n\u001b[1;32m--> 878\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfit(X, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mfit_params)\u001b[39m.\u001b[39;49mtransform(X)\n\u001b[0;32m    879\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    880\u001b[0m     \u001b[39m# fit method of arity 2 (supervised transformation)\u001b[39;00m\n\u001b[0;32m    881\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfit(X, y, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mfit_params)\u001b[39m.\u001b[39mtransform(X)\n",
-      "File \u001b[1;32mc:\\Users\\karim\\Documents\\GitHub\\practical-machine-learning-with-python\\.venv\\lib\\site-packages\\sklearn\\utils\\_set_output.py:140\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[39m@wraps\u001b[39m(f)\n\u001b[0;32m    139\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrapped\u001b[39m(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m--> 140\u001b[0m     data_to_wrap \u001b[39m=\u001b[39m f(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    141\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data_to_wrap, \u001b[39mtuple\u001b[39m):\n\u001b[0;32m    142\u001b[0m         \u001b[39m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    143\u001b[0m         \u001b[39mreturn\u001b[39;00m (\n\u001b[0;32m    144\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[39m0\u001b[39m], X, \u001b[39mself\u001b[39m),\n\u001b[0;32m    145\u001b[0m             \u001b[39m*\u001b[39mdata_to_wrap[\u001b[39m1\u001b[39m:],\n\u001b[0;32m    146\u001b[0m         )\n",
-      "File \u001b[1;32mc:\\Users\\karim\\Documents\\GitHub\\practical-machine-learning-with-python\\.venv\\lib\\site-packages\\sklearn\\feature_extraction\\_hash.py:170\u001b[0m, in \u001b[0;36mFeatureHasher.transform\u001b[1;34m(self, raw_X)\u001b[0m\n\u001b[0;32m    168\u001b[0m first_raw_X \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39m(raw_X)\n\u001b[0;32m    169\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(first_raw_X, \u001b[39mstr\u001b[39m):\n\u001b[1;32m--> 170\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    171\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mSamples can not be a single string. The input must be an iterable\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    172\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m over iterables of strings.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    173\u001b[0m     )\n\u001b[0;32m    174\u001b[0m raw_X_ \u001b[39m=\u001b[39m chain([first_raw_X], raw_X)\n\u001b[0;32m    175\u001b[0m raw_X \u001b[39m=\u001b[39m (((f, \u001b[39m1\u001b[39m) \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m x) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m raw_X_)\n",
-      "\u001b[1;31mValueError\u001b[0m: Samples can not be a single string. The input must be an iterable over iterables of strings."
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.feature_extraction import FeatureHasher\n",
-    "\n",
-    "fh = FeatureHasher(n_features=6, input_type='string')\n",
-    "hashed_features = fh.fit_transform(vg_df['Genre'])\n",
-    "hashed_features = hashed_features.toarray()\n",
-    "pd.concat([vg_df[['Name', 'Genre']], pd.DataFrame(hashed_features)], axis=1).iloc[1:7]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'dtype': numpy.float64,\n",
-       " 'input_type': 'string',\n",
-       " 'n_features': 6,\n",
-       " 'non_negative': False}"
+       "array([[ 0.,  0., -4., -1.,  0.,  0.,  0.,  0.,  0.,  2.],\n",
+       "       [ 0.,  0.,  0., -2., -5.,  0.,  0.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction import FeatureHasher\n",
+    "h = FeatureHasher(n_features=10)\n",
+    "D = [{'dog': 1, 'cat':2, 'elephant':4},{'dog': 2, 'run': 5}]\n",
+    "f = h.transform(D)\n",
+    "f.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0., -1.,  0., -1.,  0.,  1.],\n",
+       "       [ 0.,  0.,  0., -1.,  0., -1.,  0.,  0.],\n",
+       "       [ 0., -1.,  0.,  0.,  0.,  0.,  0.,  1.]])"
       ]
      },
      "execution_count": 21,
@@ -1705,8 +1695,330 @@
     }
    ],
    "source": [
+    "h = FeatureHasher(n_features=8, input_type=\"string\")\n",
+    "raw_X = [[\"dog\", \"cat\", \"snake\"], [\"snake\", \"dog\"], [\"cat\", \"bird\"]]\n",
+    "f = h.transform(raw_X)\n",
+    "f.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Sports'],\n",
+       " ['Platform'],\n",
+       " ['Racing'],\n",
+       " ['Role-Playing'],\n",
+       " ['Puzzle'],\n",
+       " ['Misc'],\n",
+       " ['Shooter'],\n",
+       " ['Simulation'],\n",
+       " ['Action'],\n",
+       " ['Fighting'],\n",
+       " ['Adventure'],\n",
+       " ['Strategy']]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst_uni = list(vg_df['Genre'].unique())\n",
+    "uni_cat = [[g] for g in lst_uni]\n",
+    "uni_cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apply_hash(fh, input_str):\n",
+    "    return fh.transform(input_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0., -1.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  1.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., -1.,  0.,  0.],\n",
+       "       [ 0.,  0., -1.,  0.,  0.,  0.],\n",
+       "       [-1.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0., -1.,  0.],\n",
+       "       [-1.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  1.],\n",
+       "       [ 1.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0., -1.,  0.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction import FeatureHasher\n",
+    "\n",
+    "fh = FeatureHasher(n_features=6, input_type='string')\n",
+    "hashed_features = fh.fit_transform(uni_cat)\n",
+    "hashed_features = hashed_features.toarray()\n",
+    "hashed_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Sports': array([ 0.,  0., -1.,  0.,  0.,  0.]),\n",
+       " 'Platform': array([0., 0., 0., 1., 0., 0.]),\n",
+       " 'Racing': array([0., 1., 0., 0., 0., 0.]),\n",
+       " 'Role-Playing': array([ 0.,  0.,  0., -1.,  0.,  0.]),\n",
+       " 'Puzzle': array([ 0.,  0., -1.,  0.,  0.,  0.]),\n",
+       " 'Misc': array([-1.,  0.,  0.,  0.,  0.,  0.]),\n",
+       " 'Shooter': array([0., 0., 0., 1., 0., 0.]),\n",
+       " 'Simulation': array([ 0.,  0.,  0.,  0., -1.,  0.]),\n",
+       " 'Action': array([-1.,  0.,  0.,  0.,  0.,  0.]),\n",
+       " 'Fighting': array([0., 0., 0., 0., 0., 1.]),\n",
+       " 'Adventure': array([1., 0., 0., 0., 0., 0.]),\n",
+       " 'Strategy': array([ 0., -1.,  0.,  0.,  0.,  0.])}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hashed_features_dict = {key:value for key, value in zip(lst_uni, list(hashed_features)) }\n",
+    "hashed_features_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        [0.0, 0.0, -1.0, 0.0, 0.0, 0.0]\n",
+       "1         [0.0, 0.0, 0.0, 1.0, 0.0, 0.0]\n",
+       "2         [0.0, 1.0, 0.0, 0.0, 0.0, 0.0]\n",
+       "3        [0.0, 0.0, -1.0, 0.0, 0.0, 0.0]\n",
+       "4        [0.0, 0.0, 0.0, -1.0, 0.0, 0.0]\n",
+       "                      ...               \n",
+       "16593     [0.0, 0.0, 0.0, 1.0, 0.0, 0.0]\n",
+       "16594     [0.0, 0.0, 0.0, 1.0, 0.0, 0.0]\n",
+       "16595     [0.0, 1.0, 0.0, 0.0, 0.0, 0.0]\n",
+       "16596    [0.0, 0.0, -1.0, 0.0, 0.0, 0.0]\n",
+       "16597     [0.0, 0.0, 0.0, 1.0, 0.0, 0.0]\n",
+       "Name: Genre_hashed, Length: 16598, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vg_df['Genre_hashed'] = vg_df['Genre'].apply(lambda x: hashed_features_dict[x])\n",
+    "vg_df['Genre_hashed']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Genre_hashed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wii Sports</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>[0.0, 0.0, -1.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Super Mario Bros.</td>\n",
+       "      <td>Platform</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 1.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mario Kart Wii</td>\n",
+       "      <td>Racing</td>\n",
+       "      <td>[0.0, 1.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wii Sports Resort</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>[0.0, 0.0, -1.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pokemon Red/Pokemon Blue</td>\n",
+       "      <td>Role-Playing</td>\n",
+       "      <td>[0.0, 0.0, 0.0, -1.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16593</th>\n",
+       "      <td>Woody Woodpecker in Crazy Castle 5</td>\n",
+       "      <td>Platform</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 1.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16594</th>\n",
+       "      <td>Men in Black II: Alien Escape</td>\n",
+       "      <td>Shooter</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 1.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16595</th>\n",
+       "      <td>SCORE International Baja 1000: The Official Game</td>\n",
+       "      <td>Racing</td>\n",
+       "      <td>[0.0, 1.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16596</th>\n",
+       "      <td>Know How 2</td>\n",
+       "      <td>Puzzle</td>\n",
+       "      <td>[0.0, 0.0, -1.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16597</th>\n",
+       "      <td>Spirits &amp; Spells</td>\n",
+       "      <td>Platform</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 1.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16598 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   Name         Genre   \n",
+       "0                                            Wii Sports        Sports  \\\n",
+       "1                                     Super Mario Bros.      Platform   \n",
+       "2                                        Mario Kart Wii        Racing   \n",
+       "3                                     Wii Sports Resort        Sports   \n",
+       "4                              Pokemon Red/Pokemon Blue  Role-Playing   \n",
+       "...                                                 ...           ...   \n",
+       "16593                Woody Woodpecker in Crazy Castle 5      Platform   \n",
+       "16594                     Men in Black II: Alien Escape       Shooter   \n",
+       "16595  SCORE International Baja 1000: The Official Game        Racing   \n",
+       "16596                                        Know How 2        Puzzle   \n",
+       "16597                                  Spirits & Spells      Platform   \n",
+       "\n",
+       "                          Genre_hashed  \n",
+       "0      [0.0, 0.0, -1.0, 0.0, 0.0, 0.0]  \n",
+       "1       [0.0, 0.0, 0.0, 1.0, 0.0, 0.0]  \n",
+       "2       [0.0, 1.0, 0.0, 0.0, 0.0, 0.0]  \n",
+       "3      [0.0, 0.0, -1.0, 0.0, 0.0, 0.0]  \n",
+       "4      [0.0, 0.0, 0.0, -1.0, 0.0, 0.0]  \n",
+       "...                                ...  \n",
+       "16593   [0.0, 0.0, 0.0, 1.0, 0.0, 0.0]  \n",
+       "16594   [0.0, 0.0, 0.0, 1.0, 0.0, 0.0]  \n",
+       "16595   [0.0, 1.0, 0.0, 0.0, 0.0, 0.0]  \n",
+       "16596  [0.0, 0.0, -1.0, 0.0, 0.0, 0.0]  \n",
+       "16597   [0.0, 0.0, 0.0, 1.0, 0.0, 0.0]  \n",
+       "\n",
+       "[16598 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vg_df[['Name', 'Genre', 'Genre_hashed']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alternate_sign': True,\n",
+       " 'dtype': numpy.float64,\n",
+       " 'input_type': 'string',\n",
+       " 'n_features': 6}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "fh.get_params()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
