weekday_name to day_name

--- a/notebooks/Ch04_Feature_Engineering_and_Selection/Feature Engineering on Temporal Data.ipynb
+++ b/notebooks/Ch04_Feature_Engineering_and_Selection/Feature Engineering on Temporal Data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -40,17 +40,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -89,7 +89,7 @@
        "3  2016-12-25 00:30:00.000000+10:00"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -112,12 +112,13 @@
      "data": {
       "text/plain": [
        "array([Timestamp('2015-03-08 10:30:00.360000+0000', tz='UTC'),\n",
-       "       Timestamp('2017-07-13 15:45:05.755000-0700', tz='pytz.FixedOffset(-420)'),\n",
-       "       Timestamp('2012-01-20 22:30:00.254000+0530', tz='pytz.FixedOffset(330)'),\n",
-       "       Timestamp('2016-12-25 00:30:00+1000', tz='pytz.FixedOffset(600)')], dtype=object)"
+       "       Timestamp('2017-07-13 15:45:05.755000-0700', tz='UTC-07:00'),\n",
+       "       Timestamp('2012-01-20 22:30:00.254000+0530', tz='UTC+05:30'),\n",
+       "       Timestamp('2016-12-25 00:30:00+1000', tz='UTC+10:00')],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -146,17 +147,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -219,7 +220,7 @@
        "      <td>25</td>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
-       "      <td>Saturday</td>\n",
+       "      <td>Sunday</td>\n",
        "      <td>360</td>\n",
        "      <td>51</td>\n",
        "    </tr>\n",
@@ -228,8 +229,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                               Time  Year  Month  Day  Quarter  DayOfWeek  \\\n",
-       "0  2015-03-08 10:30:00.360000+00:00  2015      3    8        1          6   \n",
+       "                               Time  Year  Month  Day  Quarter  DayOfWeek   \n",
+       "0  2015-03-08 10:30:00.360000+00:00  2015      3    8        1          6  \\\n",
        "1  2017-07-13 15:45:05.755000-07:00  2017      7   13        3          3   \n",
        "2  2012-01-20 22:30:00.254000+05:30  2012      1   20        1          4   \n",
        "3  2016-12-25 00:30:00.000000+10:00  2016     12   25        4          6   \n",
@@ -238,10 +239,10 @@
        "0    Sunday         67          10  \n",
        "1  Thursday        194          28  \n",
        "2    Friday         20           3  \n",
-       "3  Saturday        360          51  "
+       "3    Sunday        360          51  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
     "df['Month'] = df['TS_obj'].apply(lambda d: d.month)\n",
     "df['Day'] = df['TS_obj'].apply(lambda d: d.day)\n",
     "df['DayOfWeek'] = df['TS_obj'].apply(lambda d: d.dayofweek)\n",
-    "df['DayName'] = df['TS_obj'].apply(lambda d: d.weekday_name)\n",
+    "df['DayName'] = df['TS_obj'].apply(lambda d: d.day_name())\n",
     "df['DayOfYear'] = df['TS_obj'].apply(lambda d: d.dayofyear)\n",
     "df['WeekOfYear'] = df['TS_obj'].apply(lambda d: d.weekofyear)\n",
     "df['Quarter'] = df['TS_obj'].apply(lambda d: d.quarter)\n",
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -278,17 +279,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -311,7 +312,7 @@
        "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>360000</td>\n",
-       "      <td>00:00:00</td>\n",
+       "      <td>0 days 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -329,7 +330,7 @@
        "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>254000</td>\n",
-       "      <td>05:30:00</td>\n",
+       "      <td>0 days 05:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -338,27 +339,27 @@
        "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>10:00:00</td>\n",
+       "      <td>0 days 10:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               Time  Hour  Minute  Second  MUsecond  \\\n",
-       "0  2015-03-08 10:30:00.360000+00:00    10      30       0    360000   \n",
+       "                               Time  Hour  Minute  Second  MUsecond   \n",
+       "0  2015-03-08 10:30:00.360000+00:00    10      30       0    360000  \\\n",
        "1  2017-07-13 15:45:05.755000-07:00    15      45       5    755000   \n",
        "2  2012-01-20 22:30:00.254000+05:30    22      30       0    254000   \n",
        "3  2016-12-25 00:30:00.000000+10:00     0      30       0         0   \n",
        "\n",
        "         UTC_offset  \n",
-       "0          00:00:00  \n",
+       "0   0 days 00:00:00  \n",
        "1 -1 days +17:00:00  \n",
-       "2          05:30:00  \n",
-       "3          10:00:00  "
+       "2   0 days 05:30:00  \n",
+       "3   0 days 10:00:00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -384,17 +385,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -443,7 +444,7 @@
        "3  2016-12-25 00:30:00.000000+10:00     0   Late Night"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -467,17 +468,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -494,50 +495,50 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2015-03-08 10:30:00.360000+00:00</td>\n",
-       "      <td>00:00:00</td>\n",
+       "      <td>0 days 00:00:00</td>\n",
        "      <td>UTC</td>\n",
-       "      <td>[WET, UTC, UCT, GMT]</td>\n",
+       "      <td>[GMT, UTC, WET, +00]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2017-07-13 15:45:05.755000-07:00</td>\n",
        "      <td>-1 days +17:00:00</td>\n",
-       "      <td>pytz.FixedOffset(-420)</td>\n",
-       "      <td>[MST, GMT+7, PDT]</td>\n",
+       "      <td>UTC-07:00</td>\n",
+       "      <td>[-07, PDT, MST]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2012-01-20 22:30:00.254000+05:30</td>\n",
-       "      <td>05:30:00</td>\n",
-       "      <td>pytz.FixedOffset(330)</td>\n",
-       "      <td>[IST]</td>\n",
+       "      <td>0 days 05:30:00</td>\n",
+       "      <td>UTC+05:30</td>\n",
+       "      <td>[+0530, IST]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-12-25 00:30:00.000000+10:00</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>pytz.FixedOffset(600)</td>\n",
-       "      <td>[VLAT, ChST, AEST, PGT, DDUT, GMT-10, CHUT]</td>\n",
+       "      <td>0 days 10:00:00</td>\n",
+       "      <td>UTC+10:00</td>\n",
+       "      <td>[ChST, +10, AEST]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               Time        UTC_offset                 TZ_info  \\\n",
-       "0  2015-03-08 10:30:00.360000+00:00          00:00:00                     UTC   \n",
-       "1  2017-07-13 15:45:05.755000-07:00 -1 days +17:00:00  pytz.FixedOffset(-420)   \n",
-       "2  2012-01-20 22:30:00.254000+05:30          05:30:00   pytz.FixedOffset(330)   \n",
-       "3  2016-12-25 00:30:00.000000+10:00          10:00:00   pytz.FixedOffset(600)   \n",
+       "                               Time        UTC_offset    TZ_info   \n",
+       "0  2015-03-08 10:30:00.360000+00:00   0 days 00:00:00        UTC  \\\n",
+       "1  2017-07-13 15:45:05.755000-07:00 -1 days +17:00:00  UTC-07:00   \n",
+       "2  2012-01-20 22:30:00.254000+05:30   0 days 05:30:00  UTC+05:30   \n",
+       "3  2016-12-25 00:30:00.000000+10:00   0 days 10:00:00  UTC+10:00   \n",
        "\n",
-       "                                     TimeZones  \n",
-       "0                         [WET, UTC, UCT, GMT]  \n",
-       "1                            [MST, GMT+7, PDT]  \n",
-       "2                                        [IST]  \n",
-       "3  [VLAT, ChST, AEST, PGT, DDUT, GMT-10, CHUT]  "
+       "              TimeZones  \n",
+       "0  [GMT, UTC, WET, +00]  \n",
+       "1       [-07, PDT, MST]  \n",
+       "2          [+0530, IST]  \n",
+       "3     [ChST, +10, AEST]  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -563,17 +564,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -620,8 +621,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                               Time                          TimeUTC  \\\n",
-       "0  2015-03-08 10:30:00.360000+00:00 2015-03-08 10:30:00.360000+00:00   \n",
+       "                               Time                          TimeUTC   \n",
+       "0  2015-03-08 10:30:00.360000+00:00 2015-03-08 10:30:00.360000+00:00  \\\n",
        "1  2017-07-13 15:45:05.755000-07:00 2017-07-13 22:45:05.755000+00:00   \n",
        "2  2012-01-20 22:30:00.254000+05:30 2012-01-20 17:00:00.254000+00:00   \n",
        "3  2016-12-25 00:30:00.000000+10:00        2016-12-24 14:30:00+00:00   \n",
@@ -633,7 +634,7 @@
        "3  1.482590e+09       736322  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -657,17 +658,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -685,49 +686,49 @@
        "      <th>0</th>\n",
        "      <td>2015-03-08 10:30:00.360000+00:00</td>\n",
        "      <td>2015-03-08 10:30:00.360000+00:00</td>\n",
-       "      <td>860.207396</td>\n",
-       "      <td>860</td>\n",
+       "      <td>2958.034936</td>\n",
+       "      <td>2958</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2017-07-13 15:45:05.755000-07:00</td>\n",
        "      <td>2017-07-13 22:45:05.755000+00:00</td>\n",
-       "      <td>1.696917</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2099.524457</td>\n",
+       "      <td>2100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2012-01-20 22:30:00.254000+05:30</td>\n",
        "      <td>2012-01-20 17:00:00.254000+00:00</td>\n",
-       "      <td>2002.936564</td>\n",
-       "      <td>2003</td>\n",
+       "      <td>4100.764104</td>\n",
+       "      <td>4101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-12-25 00:30:00.000000+10:00</td>\n",
        "      <td>2016-12-24 14:30:00+00:00</td>\n",
-       "      <td>203.040734</td>\n",
-       "      <td>203</td>\n",
+       "      <td>2300.868273</td>\n",
+       "      <td>2301</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               Time                          TimeUTC  \\\n",
-       "0  2015-03-08 10:30:00.360000+00:00 2015-03-08 10:30:00.360000+00:00   \n",
+       "                               Time                          TimeUTC   \n",
+       "0  2015-03-08 10:30:00.360000+00:00 2015-03-08 10:30:00.360000+00:00  \\\n",
        "1  2017-07-13 15:45:05.755000-07:00 2017-07-13 22:45:05.755000+00:00   \n",
        "2  2012-01-20 22:30:00.254000+05:30 2012-01-20 17:00:00.254000+00:00   \n",
        "3  2016-12-25 00:30:00.000000+10:00        2016-12-24 14:30:00+00:00   \n",
        "\n",
        "   DaysElapsedEpoch  DaysElapsedOrdinal  \n",
-       "0        860.207396                 860  \n",
-       "1          1.696917                   2  \n",
-       "2       2002.936564                2003  \n",
-       "3        203.040734                 203  "
+       "0       2958.034936                2958  \n",
+       "1       2099.524457                2100  \n",
+       "2       4100.764104                4101  \n",
+       "3       2300.868273                2301  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,9 +746,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": ".venv",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -759,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
